src/objects/Study_Checklist_Version__c.object
<CustomObject>
    <fields>
        <fullName>Checklist_Version_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist Version ID</label>
        <referenceTo>Checklist_Version__c</referenceTo>
        <relationshipLabel>Study Checklists</relationshipLabel>
        <relationshipName>Study_Checklist_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Study_Questionnaire_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Study Questionnaire ID</label>
        <referenceTo>Study_Questionnaire__c</referenceTo>
        <relationshipLabel>Study Checklists</relationshipLabel>
        <relationshipName>Study_Checklist_Versions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Study__c</fullName>
        <label>Study</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Study Checklists</relationshipLabel>
        <relationshipName>Study_Checklist_Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Study Checklist Version</label>
    <nameField>
        <displayFormat>CV-{0000}</displayFormat>
        <label>Study Checklist Version Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Study Checklist Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>